--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
 p {
 	color: blue;
+	font-size: 30px;
 }
 .text {
 
-	color: gray;
+	color: white;
+	font-size: 24px;
 }
 body {
 	background: red;
+}
+h2 {
+	font-size: 42px;
 }
