--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@ p {
 	font-size: 24px;
 }
 body {
-	background: red;
+	background: grey;
+	width: 970px;
+	margin: 0 auto;
 }
 h2 {
 	font-size: 42px;
