--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,13 @@
-p {
-	color: blue;
-	font-size: 30px;
+//селектор всех потомков
+.parent .child {
+	color:blue;
+	margin-left: 5px;
 }
-.text {
-
-	color: white;
-	font-size: 24px;
+//селектор прямых потомков
+.parent > .child {
+	color: green;
 }
-body {
-	background: greenyellow;
-	width: 970px;
-	margin: 0 auto;
-}
-h2 {
-	font-size: 42px;
+//селектор сестринских элементов
+h1+div {
+	font-weight: bold;
 }
