comments in css

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
-//селектор всех потомков
+/*селектор всех потомков*/
 .parent .child {
 	color:blue;
 	margin-left: 5px;
 }
-//селектор прямых потомков
+/*селектор прямых потомков*/
 .parent > .child {
 	color: green;
 }
-//селектор сестринских элементов
+/*селектор сестринских элементов*/
 h1+div {
 	font-weight: bold;
 }
